--- a/app/src/main/res/layout/fragment_photo_gallery.xml
+++ b/app/src/main/res/layout/fragment_photo_gallery.xml
@@ -1,10 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
+<com.aspsine.swipetoloadlayout.SwipeToLoadLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                                                 xmlns:tools="http://schemas.android.com/tools"
+                                                 android:id="@+id/swipeToLoadLayout"
+                                                 android:layout_width="match_parent"
+                                                 android:layout_height="match_parent"
+                                                 tools:context="com.example.fwingy.littleflickr.Activities.MainActivity">
 
+    <com.example.fwingy.littleflickr.SwipeToLoad.RefreshHeaderView
+        android:id="@id/swipe_refresh_header"
+        android:layout_width="match_parent"
+        android:gravity="center"
+        android:layout_height="100dp" />
 
-<android.support.v7.widget.RecyclerView
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/photo_wall_recyclerview"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    <android.support.v7.widget.RecyclerView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/swipe_target"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
-</android.support.v7.widget.RecyclerView>
+    <com.example.fwingy.littleflickr.SwipeToLoad.LoadMoreFooterView
+        android:id="@id/swipe_load_more_footer"
+        android:layout_width="match_parent"
+        android:gravity="center"
+        android:layout_height="100dp" />
+
+</com.aspsine.swipetoloadlayout.SwipeToLoadLayout>
