--- a/app/src/main/res/menu/photo_wall.xml
+++ b/app/src/main/res/menu/photo_wall.xml
@@ -7,7 +7,7 @@
         android:id="@+id/action_search"
         android:icon="@drawable/ic_search_black_24dp"
         android:title="@string/action_search"
-        app:showAsAction="ifRoom"/>
+        app:showAsAction="ifRoom|collapseActionView"/>
 
 
 </menu>
