--- a/app/src/main/res/layout/gallery_swipe_to_refresh.xml
+++ b/app/src/main/res/layout/gallery_swipe_to_refresh.xml
@@ -10,6 +10,7 @@
         android:id="@id/swipe_refresh_header"
         android:layout_width="match_parent"
         android:gravity="center"
+        android:textColor="@color/textColor"
         android:layout_height="100dp" />
 
     <android.support.v7.widget.RecyclerView
@@ -22,6 +23,7 @@
         android:id="@id/swipe_load_more_footer"
         android:layout_width="match_parent"
         android:gravity="center"
+        android:textColor="@color/textColor"
         android:layout_height="100dp" />
 
 </com.aspsine.swipetoloadlayout.SwipeToLoadLayout>
