--- a/app/src/main/res/layout/photo_detail.xml
+++ b/app/src/main/res/layout/photo_detail.xml
@@ -1,8 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.view.ViewPager
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/cardview_dark_background">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                android:orientation="vertical"
+                android:background="@color/cardview_dark_background"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
-</android.support.v4.view.ViewPager>
+
+    <ImageView
+        android:adjustViewBounds="true"
+        android:maxHeight="450dp"
+        android:id="@+id/photo_detail_view"
+        android:layout_centerInParent="true"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
+</RelativeLayout>
