--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#FF4081</color>
     <color name="windowBackGround">#ffffff</color>
     <color name="textColor">#02B3E4</color>
+    <color name="lucency">#00000000</color>
 </resources>
