--- a/app/src/main/res/layout/photo_detai_viewpager.xml
+++ b/app/src/main/res/layout/photo_detai_viewpager.xml
@@ -4,28 +4,40 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/cardview_dark_background">
+    android:background="@color/pureBlack">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/detail_toolbar"
-        app:titleTextColor="@color/cardview_dark_background"
+        app:titleTextColor="@color/pureBlack"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:background="@color/cardview_dark_background"
+        android:background="@color/pureBlack"
         android:elevation="0dp"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
 
     </android.support.v7.widget.Toolbar>
 
-    <android.support.v4.view.ViewPager
-        android:layout_below="@id/detail_toolbar"
-        android:id="@+id/photo_detail_viewpager"
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/cardview_dark_background">
+        android:layout_below="@id/detail_toolbar">
+
+        <android.support.design.widget.FloatingActionButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|end"
+            android:layout_margin="16dp"
+            android:src="@drawable/ic_share_white_24dp"/>
+
+        <android.support.v4.view.ViewPager
+            android:layout_below="@id/detail_toolbar"
+            android:id="@+id/photo_detail_viewpager"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/pureBlack">
 
 
-
-    </android.support.v4.view.ViewPager>
+        </android.support.v4.view.ViewPager>
+    </FrameLayout>
 </RelativeLayout>
