--- a/app/src/main/res/menu/photo_detail.xml
+++ b/app/src/main/res/menu/photo_detail.xml
@@ -3,7 +3,7 @@
       xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/action_download"
+        android:id="@+id/menu_action_download"
         android:icon="@drawable/ic_file_download_white_24dp"
         android:title="@string/action_download"
         app:showAsAction="never" />
