--- a/app/src/main/res/layout/photo_detai_viewpager.xml
+++ b/app/src/main/res/layout/photo_detai_viewpager.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
+    android:id="@+id/detail_fragment_container"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -24,6 +25,7 @@
         android:layout_below="@id/detail_toolbar">
 
         <android.support.design.widget.FloatingActionButton
+            android:id="@+id/share_floatingButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|end"
