--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -13,21 +13,19 @@
 
 
     <TextView
-        android:id="@+id/useremail"
-        android:text="lzzi386@outlook.com"
+        android:id="@+id/userrealname"
         android:textSize="14sp"
         android:layout_alignParentBottom="true"
-        android:textColor="@color/textColor"
+        android:textColor="@color/pureBlack"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
     <TextView
-        android:id="@+id/name"
-        android:text="fwingy"
-        android:textColor="@color/textColor"
+        android:id="@+id/username"
+        android:textColor="@color/pureBlack"
         android:textSize="14sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@id/useremail"/>
+        android:layout_above="@id/userrealname"/>
 
 </RelativeLayout>
